--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: Build project
-        run: npm run build
+      - name: Build project for web
+        run: npm run build-web
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
